# bias-detector-app

./: .gitignore  README.md  flake.nix  package.json  svelte.config.ts  tsconfig.json  vite.config.ts
nix/shells/: default.nix
public/: manifest.json
rust/bias-engine/: Cargo.toml
rust/bias-engine/src/: lib.rs
src/: App.js  app.d.ts  service-worker.ts
src/components/: BiasHighlighter.js  EducationalPopup.js  WebViewer.js
src/lib/: types.ts
src/lib/services/: BiasAnalyzer.js  BiasAnalyzer.ts
src/routes/: +page.svelte
src/services/: BiasAnalyzer.js
